provarAnt/00D190000000ZY2EAM/objects/Loop__Related_Object__c.object
<CustomObject>
    <fields>
        <fullName>Loop__Advanced_Filter_Conditions__c</fullName>
        <inlineHelpText>Example: 1 AND (2 OR 3)</inlineHelpText>
        <label>Advanced Filter Conditions</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Copy_Type__c</fullName>
        <inlineHelpText>This field applies when using line items and determines whether rows, tables, or sections should be duplicated for each child record.</inlineHelpText>
        <label>Copy Type</label>
        <picklist>
            <picklistValues>
                <fullName>Row</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Table</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hierarchy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Loop__DDP__c</fullName>
        <label>DDP</label>
        <referenceTo>Loop__DDP__c</referenceTo>
        <relationshipName>Related_Objects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Loop__Delete_Table__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If checked, this specifies that you want the table(s) for this object to be deleted if there are no records in the list.</inlineHelpText>
        <label>Delete Table (if no records)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loop__Filter_Conditions__c</fullName>
        <label>Filter Conditions</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Group_By_Fields__c</fullName>
        <label>Group By</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Group_By_SortOrders__c</fullName>
        <label>Group By Sort Orders</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Hierarchy_Field__c</fullName>
        <label>Hierarchy Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Index__c</fullName>
        <label>#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__Order_By__c</fullName>
        <inlineHelpText>This field specifies the order of the related objects.</inlineHelpText>
        <label>Order By</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Loop__Parent_Object_Field__c</fullName>
        <inlineHelpText>This is used to identify the correct Child-Parent relationship. If there are multiple lookup / master-detail fields that can determine this Child-Parent relationship, select the appropriate one for the necessary data.</inlineHelpText>
        <label>Related By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Parent_Object__c</fullName>
        <inlineHelpText>This is the API Name of the standard or custom object that is the parent of this related object.</inlineHelpText>
        <label>Parent Object</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Parent_Relationship__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Relationship</label>
        <referenceTo>Loop__Related_Object__c</referenceTo>
        <relationshipLabel>Child Relationships</relationshipLabel>
        <relationshipName>Relationships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loop__Parent__c</fullName>
        <formula>IF( ISBLANK( Loop__Parent_Relationship__c ) ,
    Loop__Parent_Object__c ,
    HYPERLINK(&apos;/&apos;+Loop__Parent_Relationship__c ,
        IF( ISBLANK( Loop__Parent_Relationship__r.Loop__Related_Object_Alias__c ),
            Loop__Parent_Relationship__r.Name,
            Loop__Parent_Relationship__r.Loop__Related_Object_Alias__c
        ) + &apos; (#&apos;+ TEXT( Loop__Parent_Relationship__r.Loop__Index__c ) +&apos;)&apos;
    )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related By (What you have)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__Record_Limit__c</fullName>
        <inlineHelpText>How many records should be included? Leave blank to include all records. If the Copy Type is Hierarchy, this will limit the number of levels instead of records.</inlineHelpText>
        <label>How many records</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Loop__Related_Object_Alias__c</fullName>
        <inlineHelpText>Use this field to distinguish between two or more of the same related object. The value entered here will replace the object name in all merge tags. Salesforce Field Name validation rules apply.</inlineHelpText>
        <label>Relationship Alias</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Loop__SOQL__c</fullName>
        <label>SOQL</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <label>Relationship</label>
    <nameField>
        <label>Relationship (What you want)</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>